# ChangeLog for www-plugins/chrome-binary-plugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/chrome-binary-plugins/ChangeLog,v 1.171 2014/08/27 20:39:35 floppym Exp $

  27 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  chrome-binary-plugins-37.0.2062.94_p1.ebuild:
  Copy beta to stable.

*chrome-binary-plugins-38.0.2125.24_alpha1 (27 Aug 2014)
*chrome-binary-plugins-37.0.2062.94_p1 (27 Aug 2014)

  27 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.94_p1.ebuild,
  +chrome-binary-plugins-38.0.2125.24_alpha1.ebuild,
  -chrome-binary-plugins-36.0.1985.143_p1.ebuild,
  -chrome-binary-plugins-38.0.2125.8_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2125.8_alpha1 (23 Aug 2014)

  23 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-38.0.2125.8_alpha1.ebuild,
  -chrome-binary-plugins-38.0.2125.0_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-37.0.2062.94_beta1 (21 Aug 2014)

  21 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.94_beta1.ebuild,
  -chrome-binary-plugins-37.0.2062.76_beta1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2125.0_alpha1 (19 Aug 2014)

  19 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-38.0.2125.0_alpha1.ebuild,
  -chrome-binary-plugins-38.0.2121.3_alpha1.ebuild:
  Automated update.

*chrome-binary-plugins-37.0.2062.76_beta1 (15 Aug 2014)

  15 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-37.0.2062.76_beta1.ebuild,
  -chrome-binary-plugins-37.0.2062.68_beta1.ebuild:
  Automated update.

*chrome-binary-plugins-38.0.2121.3_alpha1 (13 Aug 2014)
*chrome-binary-plugins-36.0.1985.143_p1 (13 Aug 2014)

  13 Aug 2014; Mike Gilbert <floppym@gentoo.org>
  +chrome-binary-plugins-36.0.1985.143_p1.ebuild,
  +chrome-binary-plugins-38.0.2121.3_alpha1.ebuild,
  -chrome-binary-plugins-36.0.1985.125_p1.ebuild,