@@ -7,16 +7,16 @@ DIST google-chrome-stable_37.0.2062.94-1_amd64.deb 49195682 SHA256 5ceb34e2f2c8f
 DIST google-chrome-stable_37.0.2062.94-1_i386.deb 49680628 SHA256 132d6272b3c5ecbdc5f29f42b7ab2e8e7081cd232d2ec33c02dc56f21dbc5f6f SHA512 52fb8da03ebce58f8958adaedc3c56cf7a253cff85a0333156fc59da5126500f5e1e8d5e7f00141ae8767d51ca9cb6d857fd25f8e460d0c1c5edac6e18505b64 WHIRLPOOL 7f6ae6aec02b38fb52f2fa0020a396e0a2de1fa392d3deaa687a01ffb1213cbd832081e4282c83d437cf01ada55dd332c269abb61f26172664c772f5dce6927e
 DIST google-chrome-unstable_38.0.2125.24-1_amd64.deb 47615796 SHA256 e2d9974ca1d6c9be0f3f230d77ccea815259e91b1100f46f8b25c7f700e7c17e SHA512 7950955653c5314dac41a4d3b44ec503991e16a0b400822d60539e9cd5101aa29e6e498eb476748613f14e57a101cef58c33a4a23e9bfba70d2a90067b1f98ec WHIRLPOOL afe048a963cf1301c3cf772de58bb7d2620b2769b1976f9fa54812d0203ae1d1f83fc296fdc0704514df7695fb49abfe0e3e065ae6f40b54dea2db9058269ad2
 DIST google-chrome-unstable_38.0.2125.24-1_i386.deb 47288514 SHA256 11826a081b643d82de07d569fdd2ffce30622e6c413357551014a85701033c11 SHA512 18cfc5d5a69f9cc4ac005b8236516bf718409c62c51d656f36edf319a88f376ef9f3ef29611d7e54e2afaf0ee0493f6211b83bd4206addf28689a80a403ca9ae WHIRLPOOL cb7b0b58c57218f3fcaf1b80268a73fb306436a159f92b94f5f8dbe76a139b163a3d0a2da151e6da44e2f807d9408f8cda7e00bf9584c236340ea2a5064cc36e
-EBUILD chrome-binary-plugins-37.0.2062.94_beta1.ebuild 1918 SHA256 7d54c798336fd441db70de14ee22673c58bcffbd3673dec75ac2de44e281efc7 SHA512 43677f5727ecc085a480ed3a68367fb20b3b4bf050e7cbbee5eb4e69a8869dc942ce58201a47db389fd575306a6916a6fc94a863c6e3d55e04eb398c0f6ef9c9 WHIRLPOOL c6cd2d986c3978290fce391aa4bf2dc5486ba2873360fa7495b734d0519f1ef337afa75586162a62579cdaab38f60d91824caecf69df87052897c52c3502f937
-EBUILD chrome-binary-plugins-37.0.2062.94_p1.ebuild 1915 SHA256 4a1f61ee5707ac0aa1eb8459eaafa635445bc25da1481009f29683c5195dd47b SHA512 c234cf9a9ab3502cdb65e2ca5d8dec65619946e218ff0c82b2507ad18a154067dd68863281160cbbf37aec24e0480bcbe80b586e9d54f14c2b081f208a5e74ee WHIRLPOOL 9dd7a92584f99349a26ca4c45fc22f1d027bd48e31337f6e9b8c3a779cb765b45da582293be5f740b511f9bf15b4d4487080c44492a9b4d25a68862c70c523b2
-EBUILD chrome-binary-plugins-38.0.2125.24_alpha1.ebuild 1919 SHA256 7f3f1e0fa1811aa1dcec0769d9cb3fcecbd5e54f582797c146b6079b85c57edf SHA512 5e1843e54248c10e9886ec93c3845abf4f287926f4b82b05706937d2f344e89e689e9a61d04f926a2f5f2af8b6aeeadc3237bd3c054cb322758ae4084e6e3eab WHIRLPOOL 56d05630020ff3bc50fdb105d0c6d20156974cac58d95ea6ab8dc56d5f981f677d89ce47f71dfed2f8671b667de416923149dbb9f67e56d6a21fa9850a20038b
+EBUILD chrome-binary-plugins-37.0.2062.94_beta1.ebuild 2017 SHA256 1cf48218968490fac4e1194ce68623571d01c6b96b1f3893308aca22571fb212 SHA512 4c57d265f5e4398e06f241ac6499cf868af8ff9bada00639aea0a1fd58fd3b7f7379b322570394cd68a1f50e4632f0d742a33092f0729b6ff98e2aab0452f810 WHIRLPOOL 957a37328c02e2b6682a29a50d15c889f366c9f06045d2ce8a87d71fbcd6dc7b43da6aef5f47e14489a2d8dda801f8ffe0979a965e100f42deadd80aab9341c3
+EBUILD chrome-binary-plugins-37.0.2062.94_p1.ebuild 2014 SHA256 0a04d71e1aaf3dd7ed0b78d4d5b0afd0a745a31ac981cb57aebbdfbd01c66834 SHA512 99c503234de18d916a19f35306ae2b9b614d98fa87af4217fda42f6c443fb9667b363e8daea7413b55213d8c6a14599b5fd45c81b17d6adb301b99ff4609e9e9 WHIRLPOOL 7c9b6e4d61847a99366a530a0f54dc1861bff4d451768396cbe083f0ea4890ec5ac1295e777b41446156a8dd6fd56b2f56c481f9f4f1f1dadafdc8b1f3d5ea70
+EBUILD chrome-binary-plugins-38.0.2125.24_alpha1.ebuild 2018 SHA256 c23387e335c025ab216c1884460586b8d455e59bf88b6b3e7b9d4e61467fe8aa SHA512 b8414af8526ab7a5eab98b4d30c6ff9f96d46bc2db0a3312e73fbfdc5b0e1650c5a42e6a0d575b1e2d27d62c7a95129211fd2fbbc4458090c37062a0e267de5b WHIRLPOOL b65ce01608698cb8310890acff7be8bf5bcf3c47e5c9f463d994800a12e70246597fd5675ec53c9fc2290a6a2f14fb8973c831708aeeb49c2827ac369288e089
 EBUILD chrome-binary-plugins-9999.ebuild 1854 SHA256 91cd05b8aa8b0ef6370a0257eba4e628bb34e9fd14994cbf945b4f49bcf7db41 SHA512 46155849c7869673d452f499a9556b12e2395cfa5659d44e8eb389a9ea79ae07eabe003cb31538218e407f9dafbb0d7b1555ab6cb1532b5e950e4eaaecaacb0b WHIRLPOOL af348ef6ddc419767d94a394cbc6de23eac215140eeb4073d00ecab2c66d416d17d1cebb317a2fba9526a80bda7f73f26081f9f7dd5b7a5473ce2c6264356549
-MISC ChangeLog 47794 SHA256 c2bbc4737d40512ae606bbe56656ee50037b0609d11ff5968bdd7ae3c0a262bf SHA512 98eedf0d67bbda2faac73672251588cc7291d8cc427bbef00b57cc14b247532db9d814742104ea4204907b4f7f8ec09afeae7edf9c47d4aab02281429c9d0722 WHIRLPOOL 33cdb6f544c1d0320104811d45e146e5c17d00b0b58ff21b5b4bb350c02c0da5f665cbecff8fc59cd467f8630d1ac5f949fc943baa828b435a1eb7f0bae1a8c9
+MISC ChangeLog 48100 SHA256 99ad62350604514101f1b17867d7fbf30f881275172e35de79063b0ad3f317ee SHA512 d774663fa7bdb87a56fe563c7f8268e9ec4bcda680107b4fdc402d16dbea7d7415b42be6e5333e03a9602f1d4fec8a27ee3a078fe50fcf8afc5cdfaefd7415d3 WHIRLPOOL be506372715b7371c6172460be1cceafe82540ab20cc5f4071ad1d79280eec621e2418aa83918ffae16f56f955a46c2c766f360cb27d85e05e090516ba719f3a
 MISC metadata.xml 409 SHA256 d40d69b26dd8aefe8da69937e54e0a885d6867e28e42c5dcbe193233a84ee533 SHA512 bdf4f11c173af9f80b3475f8ea32ba966806d1e0e694bd55a6a4960717e3f3ffff69eabb060ae5ee4d3b39cdf18eeeff45c9d431c3b6ce8ae5c271c7a409aa71 WHIRLPOOL 7319320d648a8aae0eec726a8ab489bb71fe5f93dfb40847e97344a02be85a09ba931d5aeee8fdb13d899de3c90746c75a59897287c715dd771dfbe8863b803b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlP+QggACgkQC77qH+pIQ6QxLgD8Cd4YtyoTXTV2i94UoYrq324V
-B4pqty0z42R4Vo1XaKUA/3z0ARUqyHlYUkoZaVOgys/mmrP2442e4s4sk7f4H9K2
-=KeOU
+iF4EAREIAAYFAlP+duMACgkQC77qH+pIQ6SY8wD+M/XLhMaF7NrR1T9WQXZ/tq4A
+TvCqhXyVOiCAAvxW3ckA/Roc5psFv55h0jKiVMVe7URO+dWbVE0C8FCricIW01NY
+=qod6
 -----END PGP SIGNATURE-----
